--- a/trunk/ProjetoFinal/ProjetoFinal/ProjetoFinal.csproj
+++ b/trunk/ProjetoFinal/ProjetoFinal/ProjetoFinal.csproj
@@ -119,6 +119,7 @@
   <ItemGroup>
     <Content Include="Game.ico" />
     <Content Include="GameThumbnail.png" />
+    <Content Include="lib\Lidgren.Network.dll" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\ProjetoFinalContent\ProjetoFinalContent.contentproj">
