--- a/ProjetoFinal/ProjetoFinal/ProjetoFinal.csproj
+++ b/ProjetoFinal/ProjetoFinal/ProjetoFinal.csproj
@@ -65,7 +65,10 @@
   <ItemGroup>
     <Reference Include="Lidgren.Network, Version=2012.1.7.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>lib\Lidgren.Network.dll</HintPath>
+      <HintPath>..\Lib\Lidgren.Network.dll</HintPath>
+    </Reference>
+    <Reference Include="Lidgren.Network.Xna">
+      <HintPath>..\Lib\Lidgren.Network.Xna.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.Xna.Framework, Version=4.0.0.0, Culture=neutral, PublicKeyToken=842cf8be1de50553, processorArchitecture=x86">
       <Private>False</Private>
@@ -114,7 +117,12 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Player.cs" />
+    <Compile Include="Entities\Player.cs" />
+    <Compile Include="Network\ClientNetworkManager.cs" />
+    <Compile Include="Network\INetworkManager.cs" />
+    <Compile Include="Network\Messages\GameMessageTypes.cs" />
+    <Compile Include="Network\Messages\IGameMessage.cs" />
+    <Compile Include="Network\ServerNetworkManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Game1.cs" />
@@ -122,7 +130,6 @@
   <ItemGroup>
     <Content Include="Game.ico" />
     <Content Include="GameThumbnail.png" />
-    <Content Include="lib\Lidgren.Network.dll" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\ProjetoFinalContent\ProjetoFinalContent.contentproj">
