--- a/ProjetoFinal/ProjetoFinal/ProjetoFinal.csproj
+++ b/ProjetoFinal/ProjetoFinal/ProjetoFinal.csproj
@@ -119,11 +119,12 @@
   <ItemGroup>
     <Compile Include="Entities\Char.cs" />
     <Compile Include="Entities\Player.cs" />
-    <Compile Include="Entities\PlayerChar.cs" />
+    <Compile Include="Entities\PlayerOneChar.cs" />
+    <Compile Include="Managers\CharsManager.cs" />
     <Compile Include="Network\ClientNetworkManager.cs" />
     <Compile Include="Network\INetworkManager.cs" />
-    <Compile Include="Network\Messages\GameMessageTypes.cs" />
     <Compile Include="Network\Messages\IGameMessage.cs" />
+    <Compile Include="Network\Messages\UpdatePlayerStateMessage.cs" />
     <Compile Include="Network\ServerNetworkManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Program.cs" />
