--- a/trunk/ProjetoFinal/ProjetoFinal/ProjetoFinal.csproj
+++ b/trunk/ProjetoFinal/ProjetoFinal/ProjetoFinal.csproj
@@ -138,6 +138,10 @@
     <Content Include="GameThumbnail.png" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\OgmoLibrary\OgmoLibrary.csproj">
+      <Project>{B9D5C634-54A7-4CC3-AF65-AEAC49D07D26}</Project>
+      <Name>OgmoLibrary</Name>
+    </ProjectReference>
     <ProjectReference Include="..\ProjetoFinalContent\ProjetoFinalContent.contentproj">
       <Name>ProjetoFinalContent %28Content%29</Name>
       <XnaReferenceType>Content</XnaReferenceType>
