--- a/trunk/ProjetoFinal/ProjetoFinal/ProjetoFinal.csproj
+++ b/trunk/ProjetoFinal/ProjetoFinal/ProjetoFinal.csproj
@@ -122,6 +122,13 @@
     <Compile Include="Entities\Client.cs" />
     <Compile Include="EventArgs\PlayerStateChangedArgs.cs" />
     <Compile Include="Managers\LocalPlayerManager.cs" />
+    <Compile Include="Managers\LocalPlayerStates\JumpingLeftState.cs" />
+    <Compile Include="Managers\LocalPlayerStates\JumpingRightState.cs" />
+    <Compile Include="Managers\LocalPlayerStates\WalkingLeftState.cs" />
+    <Compile Include="Managers\LocalPlayerStates\WalkingRightState.cs" />
+    <Compile Include="Managers\LocalPlayerStates\JumpingState.cs" />
+    <Compile Include="Managers\LocalPlayerStates\IdleState.cs" />
+    <Compile Include="Managers\LocalPlayerStates\LocalPlayerState.cs" />
     <Compile Include="Managers\MapManager.cs" />
     <Compile Include="Managers\PlayerManager.cs" />
     <Compile Include="Managers\TextureManager.cs" />
