--- a/ProjetoFinal/ProjetoFinal/ProjetoFinal.csproj
+++ b/ProjetoFinal/ProjetoFinal/ProjetoFinal.csproj
@@ -123,20 +123,20 @@
     <Compile Include="EventArgs\PlayerStateChangedArgs.cs" />
     <Compile Include="Managers\EventManager.cs" />
     <Compile Include="Managers\LocalPlayerManager.cs" />
-    <Compile Include="Managers\LocalPlayerStates\StoppingJumpingLeftState.cs" />
-    <Compile Include="Managers\LocalPlayerStates\StoppingJumpingRightState.cs" />
-    <Compile Include="Managers\LocalPlayerStates\StoppingWalkingLeftState.cs" />
-    <Compile Include="Managers\LocalPlayerStates\StoppingWalkingRightState.cs" />
-    <Compile Include="Managers\LocalPlayerStates\WalkingSidewaysState.cs" />
-    <Compile Include="Managers\LocalPlayerStates\JumpingSideways.cs" />
-    <Compile Include="Managers\LocalPlayerStates\JumpingState.cs" />
-    <Compile Include="Managers\LocalPlayerStates\JumpingLeftState.cs" />
-    <Compile Include="Managers\LocalPlayerStates\JumpingRightState.cs" />
-    <Compile Include="Managers\LocalPlayerStates\WalkingLeftState.cs" />
-    <Compile Include="Managers\LocalPlayerStates\WalkingRightState.cs" />
-    <Compile Include="Managers\LocalPlayerStates\JumpingStraightState.cs" />
-    <Compile Include="Managers\LocalPlayerStates\IdleState.cs" />
-    <Compile Include="Managers\LocalPlayerStates\LocalPlayerState.cs" />
+    <Compile Include="Player States\PlayerStates\JumpingStates\MovingOnAirSidewaysStates\StoppingJumpingLeftState.cs" />
+    <Compile Include="Player States\PlayerStates\JumpingStates\MovingOnAirSidewaysStates\StoppingJumpingRightState.cs" />
+    <Compile Include="Player States\PlayerStates\MovingOnGroundSidewaysStates\StoppingWalkingLeftState.cs" />
+    <Compile Include="Player States\PlayerStates\MovingOnGroundSidewaysStates\StoppingWalkingRightState.cs" />
+    <Compile Include="Player States\PlayerStates\MovingOnGroundSidewaysState.cs" />
+    <Compile Include="Player States\PlayerStates\JumpingStates\MovingOnAirSideways.cs" />
+    <Compile Include="Player States\PlayerStates\JumpingState.cs" />
+    <Compile Include="Player States\PlayerStates\JumpingStates\MovingOnAirSidewaysStates\JumpingLeftState.cs" />
+    <Compile Include="Player States\PlayerStates\JumpingStates\MovingOnAirSidewaysStates\JumpingRightState.cs" />
+    <Compile Include="Player States\PlayerStates\MovingOnGroundSidewaysStates\WalkingLeftState.cs" />
+    <Compile Include="Player States\PlayerStates\MovingOnGroundSidewaysStates\WalkingRightState.cs" />
+    <Compile Include="Player States\PlayerStates\JumpingStates\JumpingStraightState.cs" />
+    <Compile Include="Player States\PlayerStates\IdleState.cs" />
+    <Compile Include="Player States\PlayerState.cs" />
     <Compile Include="Managers\MapManager.cs" />
     <Compile Include="Managers\PlayerManager.cs" />
     <Compile Include="Managers\TextureManager.cs" />
