Acertando o WalkingLeft/Right dos Players Conectados (offset CollisionBox zuada)

--- a/ProjetoFinal/ProjetoFinal/ProjetoFinal.csproj
+++ b/ProjetoFinal/ProjetoFinal/ProjetoFinal.csproj
@@ -123,20 +123,20 @@
     <Compile Include="EventArgs\PlayerStateChangedArgs.cs" />
     <Compile Include="Managers\EventManager.cs" />
     <Compile Include="Managers\LocalPlayerManager.cs" />
-    <Compile Include="Player States\PlayerStates\JumpingStates\MovingOnAirSidewaysStates\StoppingJumpingLeftState.cs" />
-    <Compile Include="Player States\PlayerStates\JumpingStates\MovingOnAirSidewaysStates\StoppingJumpingRightState.cs" />
-    <Compile Include="Player States\PlayerStates\MovingOnGroundSidewaysStates\StoppingWalkingLeftState.cs" />
-    <Compile Include="Player States\PlayerStates\MovingOnGroundSidewaysStates\StoppingWalkingRightState.cs" />
-    <Compile Include="Player States\PlayerStates\MovingOnGroundSidewaysState.cs" />
-    <Compile Include="Player States\PlayerStates\JumpingStates\MovingOnAirSideways.cs" />
-    <Compile Include="Player States\PlayerStates\JumpingState.cs" />
-    <Compile Include="Player States\PlayerStates\JumpingStates\MovingOnAirSidewaysStates\JumpingLeftState.cs" />
-    <Compile Include="Player States\PlayerStates\JumpingStates\MovingOnAirSidewaysStates\JumpingRightState.cs" />
-    <Compile Include="Player States\PlayerStates\MovingOnGroundSidewaysStates\WalkingLeftState.cs" />
-    <Compile Include="Player States\PlayerStates\MovingOnGroundSidewaysStates\WalkingRightState.cs" />
-    <Compile Include="Player States\PlayerStates\JumpingStates\JumpingStraightState.cs" />
-    <Compile Include="Player States\PlayerStates\IdleState.cs" />
-    <Compile Include="Player States\PlayerState.cs" />
+    <Compile Include="Player State Machine\PlayerStates\JumpingStates\MovingOnAirSidewaysStates\StoppingJumpingLeftState.cs" />
+    <Compile Include="Player State Machine\PlayerStates\JumpingStates\MovingOnAirSidewaysStates\StoppingJumpingRightState.cs" />
+    <Compile Include="Player State Machine\PlayerStates\MovingOnGroundSidewaysStates\StoppingWalkingLeftState.cs" />
+    <Compile Include="Player State Machine\PlayerStates\MovingOnGroundSidewaysStates\StoppingWalkingRightState.cs" />
+    <Compile Include="Player State Machine\PlayerStates\MovingOnGroundSidewaysState.cs" />
+    <Compile Include="Player State Machine\PlayerStates\JumpingStates\MovingOnAirSideways.cs" />
+    <Compile Include="Player State Machine\PlayerStates\JumpingState.cs" />
+    <Compile Include="Player State Machine\PlayerStates\JumpingStates\MovingOnAirSidewaysStates\JumpingLeftState.cs" />
+    <Compile Include="Player State Machine\PlayerStates\JumpingStates\MovingOnAirSidewaysStates\JumpingRightState.cs" />
+    <Compile Include="Player State Machine\PlayerStates\MovingOnGroundSidewaysStates\WalkingLeftState.cs" />
+    <Compile Include="Player State Machine\PlayerStates\MovingOnGroundSidewaysStates\WalkingRightState.cs" />
+    <Compile Include="Player State Machine\PlayerStates\JumpingStates\JumpingStraightState.cs" />
+    <Compile Include="Player State Machine\PlayerStates\IdleState.cs" />
+    <Compile Include="Player State Machine\PlayerState.cs" />
     <Compile Include="Managers\MapManager.cs" />
     <Compile Include="Managers\PlayerManager.cs" />
     <Compile Include="Managers\TextureManager.cs" />
