Mais refactoring nos Estados, e flippando a skin do Char novamente.

--- a/ProjetoFinal/ProjetoFinal/ProjetoFinal.csproj
+++ b/ProjetoFinal/ProjetoFinal/ProjetoFinal.csproj
@@ -123,15 +123,15 @@
     <Compile Include="EventArgs\PlayerStateChangedArgs.cs" />
     <Compile Include="Managers\EventManager.cs" />
     <Compile Include="Managers\LocalPlayerManager.cs" />
-    <Compile Include="PlayerStateMachine\JumpingStates\VerticalIdleState.cs" />
-    <Compile Include="PlayerStateMachine\SidewaysStates\HorizontalIdleState.cs" />
-    <Compile Include="PlayerStateMachine\SidewaysStates\StoppingWalkingLeftState.cs" />
-    <Compile Include="PlayerStateMachine\SidewaysStates\StoppingWalkingRightState.cs" />
-    <Compile Include="PlayerStateMachine\JumpingStates\VerticalMovementState.cs" />
-    <Compile Include="PlayerStateMachine\JumpingStates\JumpingState.cs" />
-    <Compile Include="PlayerStateMachine\SidewaysStates\WalkingLeftState.cs" />
-    <Compile Include="PlayerStateMachine\SidewaysStates\WalkingRightState.cs" />
-    <Compile Include="PlayerStateMachine\SidewaysStates\SidewaysState.cs" />
+    <Compile Include="PlayerStateMachine\VerticalMovementStates\VerticalIdleState.cs" />
+    <Compile Include="PlayerStateMachine\HorizontalMovementStates\HorizontalIdleState.cs" />
+    <Compile Include="PlayerStateMachine\HorizontalMovementStates\StoppingWalkingLeftState.cs" />
+    <Compile Include="PlayerStateMachine\HorizontalMovementStates\StoppingWalkingRightState.cs" />
+    <Compile Include="PlayerStateMachine\VerticalMovementStates\VerticalMovementState.cs" />
+    <Compile Include="PlayerStateMachine\VerticalMovementStates\JumpingState.cs" />
+    <Compile Include="PlayerStateMachine\HorizontalMovementStates\WalkingLeftState.cs" />
+    <Compile Include="PlayerStateMachine\HorizontalMovementStates\WalkingRightState.cs" />
+    <Compile Include="PlayerStateMachine\HorizontalMovementStates\HorizontalMovementState.cs" />
     <Compile Include="Managers\MapManager.cs" />
     <Compile Include="Managers\PlayerManager.cs" />
     <Compile Include="Managers\TextureManager.cs" />
