Menus finalizados e funcionais. Faltam varios refactoring, olhar Task List (TODO)

--- a/ProjetoFinal/ProjetoFinal/ProjetoFinal.csproj
+++ b/ProjetoFinal/ProjetoFinal/ProjetoFinal.csproj
@@ -123,6 +123,8 @@
     <Compile Include="EventHeaders\ClientConnectedEventArgs.cs" />
     <Compile Include="EventHeaders\PlayerStateUpdatedEventArgs.cs" />
     <Compile Include="Game.cs" />
+    <Compile Include="GameStateEngine\NetworkGUIGameState.cs" />
+    <Compile Include="GameStateEngine\NetworkGameState.cs" />
     <Compile Include="GameStateEngine\GameStates\GUIGameState.cs" />
     <Compile Include="GameStateEngine\GUIGameState.cs" />
     <Compile Include="GameStateEngine\GameState.cs" />
